syntax = "proto3";

package auth;

import "buf/validate/validate.proto";
import "internal/core/key/proto/key/key.proto";
import "pkg/utils/protoutils/ghoster/proto/ghoster.proto";

option go_package = "github.com/werbot/werbot/internal/core/scheme/proto/auth";

enum AuthMethod {
  auth_unspecified = 0;
  password = 1;
  key = 2;
  agent = 3;
  mtls = 4;
  api = 5;
}

// -----------------------------------
message Auth {
  message Password {
    string login = 1 [(buf.validate.field).string = { pattern: '^[a-zA-Z0-9]+$' min_len: 3 max_len: 20 }];
    string password = 2 [(buf.validate.field).string = { min_len: 8 max_len: 32 }, (ghoster.secret) = true];
  }

  message Key {
    string login = 1 [(buf.validate.field).string = { pattern: '^[a-zA-Z0-9]+$' min_len: 3 max_len: 20 }];
    oneof access {
      option (buf.validate.oneof).required = true;
      string key_id = 2;
      key.SchemeKey key = 3;
    }
  }

  message Agent {
    string address = 1 [(buf.validate.field).string.address = true];
    int32 port = 2 [(buf.validate.field).int32 = { gte: 1 lt: 65536 }];
    Key key = 3;
  }

  message MTLS {
    string server_ca = 1 [(ghoster.secret) = true];
    string client_cert = 2 [(ghoster.secret) = true];
    string client_key = 3;
  }

  message API {
    string access_key_id = 1 [(ghoster.secret) = true];
    string secret_access_key = 2 [(ghoster.secret) = true];
    string role_arn = 3;
    string role_external_id = 4;
  }
}
// -----------------------------------
